--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <span>L.I.N.A</span>
+    <span> K.A.L.I</span>
     <span>BIBLIOTECA VRT</span>
     <span>ABOUT US</span>
   </header>
@@ -38,14 +38,14 @@
                   <a href="#" data-category="literatura" class="navbar-link active">Literatura</a>
                 </li>
                 <li class="navbar-item">
-                  <a href="#" data-category="ciencia_y_tecnologia" class="navbar-link">Ciencia y Tecnología</a>
+                  <a href="#" data-category="ciencia" class="navbar-link">Ciencia y Tecnología</a>
                 </li>
                 <li class="navbar-item">
                   <a href="#" data-category="historia" class="navbar-link">Historia y Sociales</a>
                 </li>
-                <li class="navbar-item">
+                <!-- <li class="navbar-item">
                   <a href="#" data-category="arte" class="navbar-link">Arte y Cultura</a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </nav>
@@ -81,6 +81,8 @@
         </div>
       </div>
     </div>
+
+
   </div>
 
   <footer>
